keycloak/sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
spec:
  selector: {}
  serviceName: keycloak
  replicas: 1
  template:
    metadata:
      labels:
        app.life.uni-leipzig.de/redundancy: none
        app.life.uni-leipzig.de/service-level: silver
    spec:
      enableServiceLinks: false
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:24.0.5@sha256:f8ade94c1d0ad2f2fa7734a455fee5392764f402c43ca35e9af6bf63a2541dc9
        args: ["start-dev"]
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: data
          mountPath: /opt/keycloak/data/h2
        startupProbe:
          httpGet: &rprobe
            path: /health/ready
            port: 8080
          failureThreshold: 6
        livenessProbe:
          httpGet:
            path: /health/live
            port: 8080
        readinessProbe:
          httpGet: *rprobe
        resources:
          requests:
            cpu: "125m"
            memory: "1Gi"
          limits:
            memory: "1Gi"
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      storageClassName: vsan
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
