keycloak/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector: {}
