keycloak/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header forwarded "host=auth.distance-xt.life.uni-leipzig.local;proto=https";
spec:
  rules:
  - host: auth.distance-xt.life.uni-leipzig.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              name: http
